--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "pokemoria",
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -11,17 +13,12 @@
     "@react-navigation/bottom-tabs": "*",
     "@react-navigation/native": "*",
     "@react-navigation/native-stack": "*",
-    "dotenv": "^16.0.3",
-    "expo": "~46.0.17",
     "expo-constants": "~13.2.4",
-    "expo-status-bar": "~1.4.0",
-    "firebase": "*",
-    "react": "18.0.0",
-    "react-native": "0.69.6",
+    "firebase": "8.2.3",
     "react-native-paper": "4.9.2",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-vector-icons": "*"
+    "react-native-vector-icons": "9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
